# ambs_assembler

./: README.md
ambs_test_common/: CMakeLists.txt  ambs_repository.json  package.xml
ambs_test_common/launch/: common.launch
araig_model/: .project  braking_test.rossystem  representations.aird
araig_model/components/: braking_test.componentinterface  braking_test_target.componentinterface  comp_param_node.componentinterface  comp_poses_node.componentinterface  comp_topics_node.componentinterface  diff_pose_temporal_node.componentinterface  diff_time_node.componentinterface  float_series_logger_node.componentinterface  folder_bagger_node.componentinterface  goal_interpreter.componentinterface  location_interpreter.componentinterface  marvel_interpreter.componentinterface  results_logger_node.componentinterface  rosparam_logger_node.componentinterface  test4_runner.componentinterface  test_1_braking.componentinterface  test_1_ui.componentinterface  velocity_interpreter.componentinterface
araig_model/msgs/: araig_msgs.ros  marvelmind_nav.ros
araig_model/rosnodes/python/calculators/: comp_param_node.ros  comp_poses_node.ros  comp_topics_node.ros  diff_pose_temporal_node.ros  diff_time_node.ros
araig_model/rosnodes/python/interpreters/: goal_interpreter.ros  location_interpreter.ros  velocity_interpreter.ros
araig_model/rosnodes/python/logging/: float_series_logger_node.ros  folder_bagger_node.ros  results_logger_node.ros  (+1 more)
araig_model/src-gen/braking_test/: CMakeLists.txt  package.xml
araig_model/src-gen/braking_test/launch/: braking_test.launch
(+4 files in other folders)
